--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ header ul li {
     color:black;
     margin-left: 32px;
 }
+nav {
+    display: none;
+}
 .slider {
     grid-area: nav;
     /* background-color: rgb(225, 255, 0); */
@@ -126,9 +129,7 @@ aside .aboutuscontent  button {
     color: white;
     font-size: 32px;
 }
-.feature .featurecards figcaption {
 
-}
 footer {
     grid-area: footer;
     background-color: rgb(213, 213, 213);
@@ -165,7 +166,10 @@ footer button {
 * {box-sizing: border-box}
 body {font-family: Verdana, sans-serif; margin:0}
 .mySlides {display: none}
-img {vertical-align: middle;}
+img {
+    vertical-align: middle;
+
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -272,8 +276,209 @@ img {vertical-align: middle;}
         "main"
         "aside"
         "footer";
-    }    
+    }
+    
+ main .welcometext h4 {
+    font-size: 80px !important;
 }
+main .welcometext h2 {
+    font-size: 40px!important;
+    margin: 80px auto!important;
+}
+main .welcometext p {
+    font-size: 16px;
+    margin: 0 auto!important;
+}
+aside .aboutuscontent {
+    position: absolute;
+    left: 50px;
+    top:50px;
+}
+aside .aboutuscontent h2 {
+    font-size: 30px;
+    color: #f2f2f2;
+}
+aside .aboutuscontent  button {
+    margin-top: 20px;
+    color: #f2f2f2;
+    background-color: black;
+    font-size: 20px;
+    padding: 20px;
+}
+.feature .featuretitle button {
+display: none;  
+}
+
+
+footer {
+    display: flex!important;
+    flex-direction: column !important;
+}
+footer img {
+    height: 200px;
+}
+footer ul {
+    display: flex;
+    flex-direction: column !important;
+    align-items: center;
+}
+footer ul li {
+    color:black;
+    margin-left: 32px;
+}
+footer button {
+    color: #f2f2f2;
+    background-color: black;
+    font-size: 20px;
+    padding: 20px; 
+}
+
+nav{
+    display: block;
+ }
+ #menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 50px;
+   left: 50px;
+   
+   z-index: 100;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ #menuToggle a:hover
+ {
+   color: tomato;
+ }
+ 
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0; /* hide this */
+   z-index: 2; /* and place it over the hamburger */
+   
+   -webkit-touch-callout: none;
+ }
+ 
+ /*
+  * Just a quick hamburger
+  */
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ /* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ /*
+  * But let's hide the middle one.
+  */
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ /*
+  * Ohyeah and the last one should go the other direction
+  */
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ /*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   /* to stop flickering of text in safari */
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+ 
+ /*
+  * And let's slide it in from the left
+  */
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
+}    
+
 
 /* SM [576px - 768px] Landscape Phones */
 @media (max-width: 767.98px) { 
@@ -286,12 +491,264 @@ img {vertical-align: middle;}
         "main"
         "aside"
         "footer";
-    }    
+    }
+    
+header ul   {
+    display: none;
+}
+/*
+ * Made by Erik Terwan
+ * 24th of November 2015
+ * MIT License
+ *
+ *
+ * If you are thinking of using this in
+ * production code, beware of the browser
+ * prefixes.
+ */
+
+
+ nav{
+    display: block;
+ }
+ #menuToggle
+ {
+   display: block;
+   position: relative;
+   top: 50px;
+   left: 50px;
+   
+   z-index: 100;
+   
+   -webkit-user-select: none;
+   user-select: none;
+ }
+ 
+ #menuToggle a
+ {
+   text-decoration: none;
+   color: #232323;
+   
+   transition: color 0.3s ease;
+ }
+ 
+ #menuToggle a:hover
+ {
+   color: tomato;
+ }
+ 
+ 
+ #menuToggle input
+ {
+   display: block;
+   width: 40px;
+   height: 32px;
+   position: absolute;
+   top: -7px;
+   left: -5px;
+   
+   cursor: pointer;
+   
+   opacity: 0; /* hide this */
+   z-index: 2; /* and place it over the hamburger */
+   
+   -webkit-touch-callout: none;
+ }
+ 
+ /*
+  * Just a quick hamburger
+  */
+ #menuToggle span
+ {
+   display: block;
+   width: 33px;
+   height: 4px;
+   margin-bottom: 5px;
+   position: relative;
+   
+   background: #cdcdcd;
+   border-radius: 3px;
+   
+   z-index: 1;
+   
+   transform-origin: 4px 0px;
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+               opacity 0.55s ease;
+ }
+ 
+ #menuToggle span:first-child
+ {
+   transform-origin: 0% 0%;
+ }
+ 
+ #menuToggle span:nth-last-child(2)
+ {
+   transform-origin: 0% 100%;
+ }
+ 
+ /* 
+  * Transform all the slices of hamburger
+  * into a crossmark.
+  */
+ #menuToggle input:checked ~ span
+ {
+   opacity: 1;
+   transform: rotate(45deg) translate(-2px, -1px);
+   background: #232323;
+ }
+ 
+ /*
+  * But let's hide the middle one.
+  */
+ #menuToggle input:checked ~ span:nth-last-child(3)
+ {
+   opacity: 0;
+   transform: rotate(0deg) scale(0.2, 0.2);
+ }
+ 
+ /*
+  * Ohyeah and the last one should go the other direction
+  */
+ #menuToggle input:checked ~ span:nth-last-child(2)
+ {
+   transform: rotate(-45deg) translate(0, -1px);
+ }
+ 
+ /*
+  * Make this absolute positioned
+  * at the top left of the screen
+  */
+ #menu
+ {
+   position: absolute;
+   width: 300px;
+   margin: -100px 0 0 -50px;
+   padding: 50px;
+   padding-top: 125px;
+   
+   background: #ededed;
+   list-style-type: none;
+   -webkit-font-smoothing: antialiased;
+   /* to stop flickering of text in safari */
+   
+   transform-origin: 0% 0%;
+   transform: translate(-100%, 0);
+   
+   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+ }
+ 
+ #menu li
+ {
+   padding: 10px 0;
+   font-size: 22px;
+ }
+ 
+ /*
+  * And let's slide it in from the left
+  */
+ #menuToggle input:checked ~ ul
+ {
+   transform: none;
+ }
+
+ main .welcometext h4 {
+
+    font-size: 5px;
+}
+main .welcometext h2 {
+    font-size: 40px;
+    margin-top: 157px;
+    margin-left: 80px;
+}
+main .welcometext p {
+    font-size: 16px;
+    margin-left: 80px;
+}
+
+
+
+
 }
 
 /* MD [768px - 992px] Tablets */
 @media (max-width: 991.98px) {
-    
+    .container {
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        /* grid-template-rows: repeat(3, 1fr); */
+        grid-template-areas: 
+            'a a a header header header header header header b b b'
+            'nav nav nav nav nav nav nav nav nav nav nav nav'
+            'main main main main main main main main main main main main'
+            'article article article article article article article article article article article article'
+            'aside aside aside aside aside aside aside aside aside aside aside aside'
+            'feat feat feat feat feat feat feat feat feat feat feat feat'
+            'footer footer footer footer footer footer footer footer footer footer i i';
+        grid-gap: 8pt;
+        justify-content: center;
+        align-items: center;
+    }
+    main .welcomeimage {
+        display: none;
+    }
+    main .welcometext h4 {
+        position: absolute;
+        top: -17px;
+        font-size: 150px;
+    }
+    main .welcometext h2 {
+        font-size: 40px;
+        margin-top: 157px;
+        margin-left: 80px;
+    }
+    main .welcometext p {
+        font-size: 16px;
+        margin-left: 80px;
+    }
+    .feature .featurecards {
+        display: flex;
+        flex-direction: column;
+        
+        position: relative;
+    }
+    .feature .featurecards figure {
+        margin-top: 20px;
+    }
+    .feature .featurecards img {
+        height: 300px;
+    }
+    .feature .featurecards figcaption {
+        position: absolute;
+        left: 60px;
+        bottom: 50px;
+        color: white;
+        font-size: 32px;
+    }
+    footer {
+        grid-area: footer;
+        background-color: rgb(213, 213, 213);
+        display: flex;
+    }
+    footer img {
+        height: 200px;
+    }
+    footer ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+    footer ul li {
+        color:black;
+        margin-left: 32px;
+    }
+    footer button {
+        color: #f2f2f2;
+        background-color: black;
+        font-size: 32px;
+        padding: 20px;  
+    }  
 }
 
 /* LG [992px - 1200px] Large Desktop */
